# record-gl

./: .travis.yml  Main.hs  README.md  cabal.sandbox.config  hackagedocs.sh  record-gl.cabal  records-gl.cabal
examples/: LICENCE  record-gl-examples.cabal
examples/2D/: Keyboard2D.hs  Main.hs  Window.hs
shaders/: game2d.frag  game2d.vert
src/Graphics/: RecordGL.hs
src/Graphics/RecordGL/: Uniforms.hs  Util.hs  Vertex.hs
src/Record/: Introspection.hs  LICENCE
tests/: BasicTests.hs
