name:                record-gl
version:             0.1.0.0
synopsis:            Utilities for working with OpenGL's GLSL shading language and Nikita Volkov's "Record"s.
description:         Using Nikita Volkov's "Record" records
                     to carry GLSL uniform parameters and vertex data enables
                     library code to reflect over the types of the data to
                     facilitate interaction between Haskell and GLSL. See the
                     @examples@ directory in the repository for more.
license:             BSD3
license-file:        LICENCE
author:              Sebastián Méndez
maintainer:          sebas.chinoir@gmail.com
copyright:           Original work copyright (C) 2013 Anthony Cowley, modifications copyright (C) 2015 Sebastián Méndez
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
source-repository head
  type:     git
  location: http://github.com/rabipelais/record-gl

library
  exposed-modules:     Graphics.RecordGL
                     , Graphics.RecordGL.Vertex
                     , Graphics.RecordGL.Uniforms
                     , Record.Introspection
--other-modules
--  ghc-options:         -ddump-splices
  build-depends:       GLUtil >= 0.6.4
                     , OpenGL >= 2.8
                     , base >=4.6 && <5
                     , base-prelude
                     , containers >= 0.5
                     , linear >= 1.1.3
                     , record >= 0.3
                     , template-haskell
                     , vector >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
