name:                record-gl-examples
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Sebastian Mendez
maintainer:          sebas.chinoir@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          assets/*.png, shaders/*.frag, shaders/*.vert

executable Game2D
  main-is:             Main.hs
  other-modules:       Window, Keyboard2D
  -- other-extensions:
  build-depends:       GLFW-b >= 1.4 && < 1.4.7
                     , GLUtil >= 0.7
                     , OpenGL >= 2.9.2
                     , base >=4.7 && <4.8
                     , containers >= 0.5.5.1
                     , directory >= 1.2.1.0
                     , filepath >= 1.3.0.2
                     , lens >= 4.7
                     , linear >= 1.1.3
                     , record >= 0.3
                     , record-gl >= 0.1.0.0
                     , time >= 1.4.2
                     , vector >= 0.10
  hs-source-dirs:      2D
  default-language:    Haskell2010